depot de fichier index modifier par milamem

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
 
   <!-- CSS Fichiers -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/css/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/css/swiper-bundle.min.css" rel="stylesheet">
 
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -618,78 +618,78 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                    </tr>
-                  
-                    <tr>
-                        <td>Brielle Williamson</td>
-                        <td>Integration Specialist</td>
-                        <td>New York</td>
-                        <td>61</td>
-                        <td>2012/12/02</td>
-                    </tr>
-                    <tr>
-                        <td>Herrod Chandler</td>
-                        <td>Sales Assistant</td>
-                        <td>San Francisco</td>
-                        <td>59</td>
-                        <td>2012/08/06</td>
-                    </tr>
-                    <tr>
-                        <td>Rhona Davidson</td>
-                        <td>Integration Specialist</td>
-                        <td>Tokyo</td>
-                        <td>55</td>
-                        <td>2010/10/14</td>
-                    </tr>
-                    <tr>
-                        <td>Colleen Hurst</td>
-                        <td>Javascript Developer</td>
-                        <td>San Francisco</td>
-                        <td>39</td>
-                        <td>2009/09/15</td>
-                    </tr>
-                    <tr>
-                        <td>Sonya Frost</td>
-                        <td>Software Engineer</td>
-                        <td>Edinburgh</td>
-                        <td>23</td>
-                        <td>2008/12/13</td>
-                    </tr>
-                    <tr>
-                        <td>Jena Gaines</td>
-                        <td>Office Manager</td>
-                        <td>London</td>
-                        <td>30</td>
-                        <td>2008/12/19</td>
-                    </tr>
-                    <tr>
-                        <td>Quinn Flynn</td>
-                        <td>Support Lead</td>
-                        <td>Edinburgh</td>
-                        <td>22</td>
-                        <td>2013/03/03</td>
-                    </tr>
-                    <tr>
-                        <td>Charde Marshall</td>
-                        <td>Regional Director</td>
-                        <td>San Francisco</td>
-                        <td>36</td>
-                        <td>2008/10/16</td>
-                    </tr>
-                    <tr>
-                        <td>Haley Kennedy</td>
-                        <td>Senior Marketing Designer</td>
-                        <td>London</td>
-                        <td>43</td>
-                        <td>2012/12/18</td>
-                    </tr>         
-                </tbody>
+                  <tr>
+                      <td>kabore</td><!--- nom  -->
+                      <td>jean</td><!---prénom nom  -->
+                      <td>etudiant</td><!--- profession  -->
+                      <td>22ans</td><!--- age  -->
+                      <td>2023/04/25</td><!--- date  -->
+                  </tr>
+                
+                  <tr>
+                      <td>cyprien</td><!--- nom  -->
+                      <td>sawadogo</td><!---prénom nom  -->
+                      <td>travailleur</td><!--- profession  -->
+                      <td>42 ans</td><!--- age  -->
+                      <td>2023/05/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>ousseni</td><!--- nom  -->
+                      <td>OUEDRAOGO</td><!---prénom nom  -->
+                      <td>enseignant</td><!--- profession  -->
+                      <td>32 ans</td><!--- age  -->
+                      <td>2023/06/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>eliane</td><!--- nom  -->
+                      <td>nikiema</td><!---prénom nom  -->
+                      <td>travailleur</td><!--- profession  -->
+                      <td>42 ans</td><!--- age  -->
+                      <td>2023/07/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>sanou</td><!--- nom  -->
+                      <td>eveline</td><!---prénom nom  -->
+                      <td>travailleur</td><!--- profession  -->
+                      <td>60 ans</td><!--- age  -->
+                      <td>2023/08/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>bruno</td><!--- nom  -->
+                      <td>tiendrebeogo</td><!---prénom nom  -->
+                      <td>Eleve</td><!--- profession  -->
+                      <td>15 ans</td><!--- age  -->
+                      <td>2023/09/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>lomgrin</td><!--- nom  -->
+                      <td>miriam</td><!---prénom nom  -->
+                      <td>travailleur</td><!--- profession  -->
+                      <td>55 ans</td><!--- age  -->
+                      <td>2023/10/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>bandaogo</td><!--- nom  -->
+                      <td>adams</td><!---prénom nom  -->
+                      <td>travailleur</td><!--- profession  -->
+                      <td>40 ans</td><!--- age  -->
+                      <td>2023/11/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>simpore</td><!--- nom  -->
+                      <td>rucien</td><!---prénom nom  -->
+                      <td>etudiant</td><!--- profession  -->
+                      <td>30 ans</td><!--- age  -->
+                      <td>2023/12/25</td><!--- date  -->
+                  </tr>
+                  <tr>
+                      <td>compaore</td><!--- nom  -->
+                      <td>chantal</td><!---prénom nom  -->
+                      <td>etudiant</td><!--- profession  -->
+                      <td>28 ans</td><!--- age  -->
+                      <td>2023/01/25</td><!--- date  -->
+                  </tr>         
+              </tbody>
 
             </table>
         </div>
